--- a/mysite/food/templates/food/base.html
+++ b/mysite/food/templates/food/base.html
@@ -32,6 +32,11 @@
         </div>
     </nav>
 
+    <!-- for spacing -->
+    <div class="mb-5">
+
+    </div>
+
     {% block body %}
     {% endblock %}
 
