--- a/mysite/food/templates/food/index.html
+++ b/mysite/food/templates/food/index.html
@@ -47,7 +47,7 @@
                         font-style: italic;
                     "
                 >
-                    added for: 
+                    added for: {{ item.for_user }}
                 </h6>
 
                 <h6
@@ -55,7 +55,7 @@
                         font-style: italic;
                     "
                 >
-                    added by superuser: 
+                    added by superuser: admin
                 </h6>
             </div>
 
