--- a/mysite/food/templates/food/base.html
+++ b/mysite/food/templates/food/base.html
@@ -18,7 +18,7 @@
         </a>
 
         <div class="navbar">
-            <a href="#" class="nav-item nav-link btn btn-dark">
+            <a href="{% url 'food:create_item' %}" class="nav-item nav-link btn btn-dark">
                 Add Item
             </a>
 
