--- a/mysite/food/templates/food/index.html
+++ b/mysite/food/templates/food/index.html
@@ -55,7 +55,7 @@
                         font-style: italic;
                     "
                 >
-                    added by superuser: admin
+                    added by superuser: {{ item.user }}
                 </h6>
             </div>
 
