--- a/mysite/users/templates/users/register.html
+++ b/mysite/users/templates/users/register.html
@@ -10,7 +10,7 @@
             <div class="card">
                 <div class="card-header text-white bg-info">
                     <div class="card-title">
-                        Login
+                        Register
                     </div>
                 </div>
                 <div class="card-body">
