--- a/mysite/food/templates/food/detail.html
+++ b/mysite/food/templates/food/detail.html
@@ -235,7 +235,7 @@
                                 {% if user.profile.user_type == 'Cust' %}
                                     <a
                                         class="btn btn-primary btn-sm"
-                                        href="#">
+                                        href="{% url 'users:buy' item.item_price obj.quantity %}">
                                         
                                         Buy Now
                                     </a>
