--- a/mysite/food/templates/food/base.html
+++ b/mysite/food/templates/food/base.html
@@ -18,6 +18,15 @@
             Exortillo
         </a>
 
+        <!-- path of the current page -->
+        <form action="{% url 'food:navform' %}" method="GET">
+            {% csrf_token %}
+            <span><b style="color:white">Form: </b></span>
+            <input type="text" name="navformdata">
+            <input hidden type="text" name="item_name" value="{{ request.path }}">
+            <button type="submit">Submit</button>
+        </form>
+
         <!-- for search functionality -->
         <form action="{% url 'food:index' %}" method="GET">
             {% csrf_token %}
